<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@color/colorLightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackBtn" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPostImage" />

    <EditText
        android:id="@+id/etPostTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:hint="@string/et_hint_title"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />

    <EditText
        android:id="@+id/etPostDescription"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/et_hint_description"
        android:inputType="textMultiLine"
        android:maxLength="80"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPostTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/btn_create_post"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="@+id/etPostDescription"
        app:layout_constraintTop_toBottomOf="@+id/etPostDescription" />

    <ImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <ProgressBar
        android:id="@+id/createProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btnCreatePost"
        app:layout_constraintStart_toStartOf="@+id/btnCreatePost"
        app:layout_constraintTop_toTopOf="@+id/btnCreatePost" />

</androidx.constraintlayout.widget.ConstraintLayout>